--- a/literature/theory/main/theory.tex
+++ b/literature/theory/main/theory.tex
@@ -2421,7 +2421,7 @@ paribus, \(\hat{k}\) will be higher for the frictionless case.
 Imposing s.s. condition for capital (\(k_t=k_{t+1}=\hat{k}\)) into the flow of funds constraint \ref{eq:ff}:
 
 \begin{equation}
-    \widehat{d} =\frac{1+\mu-\mu p}{p}f(\hat{k})-\left(\frac{R_f+\delta p - l p}{p}\right)\hat{k} \label{eq:div_opt_path}
+    \widehat{d} =\frac{1+\mu-\mu p}{p}f(\hat{k})-\left(\frac{l R_f+\delta p - l p}{p}\right)\hat{k} \label{eq:div_opt_path}
 \end{equation}
 It can be straightforwardly demonstrated that by setting the monitoring cost to \(1-\mu=1\), eliminating debt
 with \(l=0\), and removing the risk of default by setting \(1-p=0\), we arrive at an identical level of dividends as
@@ -2436,9 +2436,9 @@ higher since:
 This is valid also for the coefficient of \(\hat{k}\) in equation \ref{eq:div_opt_path}, which is higher than the free
 debt case:
 \begin{align*}
-    \frac{R_f+\delta p - l p}{p}&>(1-\delta) \\
-    \frac{R_f+\delta p - l p}{p(1-\delta)}&>0 \\
-    R_f &> p(l-\delta)\\
+    \frac{l R_f+\delta p - l p}{p}&>(1-\delta) \\
+    \frac{l R_f+\delta p - l p}{p(1-\delta)}&>0 \\
+    R_f l &> p(l-\delta)\\
     p(1-\delta)&>0
 \end{align*}
 
