--- a/literature/theory/main/theory.tex
+++ b/literature/theory/main/theory.tex
@@ -727,12 +727,12 @@ This is largely consistent with \cite{OsePap17} since younger firms are less cap
 this mechanism that is not included in the \cite{CabHarm94} can modify the strict relations between productivity and
 survival rate. 
 A final question remains from the empirical point of view; 
-Did these patterns change in the Great Recession?
+Did these patterns change in the great Recession?
 That is an important question since as exposed in the model in this thesis financial frictions can reduce the cleansing
 effect of the economic downturn. 
 An answer to this question can be found in the regressions results exposed in table 3, in particular one can see
 that the interaction effects between cycle and TFP are larger for the period previous to the Great Recession. Indeed the
-three-way interaction terms between TFP, cycle, and, Great Recession dummy are negative and statistically significant for
+three-way interaction terms between TFP, cycle and, Great Recession dummy are negative and statistically significant for
 exit and overall growth. Thus, instead of the cycle enhancing the impact of TFP
 on overall growth, it tends to diminish it on the margin in the Great
 Recession. A similar pattern is observed for exit. The estimated three-way
@@ -1197,16 +1197,16 @@ In the considered model, production units integrate labor and capital in fixed p
 can be conceptualized as contributing to job creation within the industry, and job-flow data serves as a metric for
 quantifying the flows of production units. 
 
-Datasets that closely align with the theoretical CC and DD series have been compiled by Davis and Haltiwanger
-\cite{DAvHalt90,DavHalt92} and Blanchard and Diamond \cite{BlaDia90}, drawing from various sources. The primary focus
+Datasets that closely align with the theoretical CC and DD series have been compiled by 
+\cite{DAvHalt90,DavHalt92} and  \cite{BlaDia90}, drawing from various sources. The primary focus
 lies on the dataset curated by Davis and Haltiwanger, who leverage the Longitudinal Research Database to construct
 quarterly series for U.S. manufacturing plants spanning the period 1972:2-1986:4. 
 
 In their empirical approach, \cite{DavHal94}utilize output to empirically determine demand, employing the growth
 rate of the industrial production index as a proxy for output growth. Notably, in the foundational theoretical model,
 \(Q(r)\) is smoothed by price movement, with the elasticity of demand determining the extent of smoothing, assumed to be
-equal to 1. While the theoretical model maintains a constant dividend-wage, the authors acknowledge that considering
-a procyclical dividend-wage, as in the case of general equilibrium with correlated industry shocks, may dampen the
+equal to 1. While the theoretical model maintains a constant dividend wage, the authors acknowledge that considering
+a procyclical dividend wage, as in the case of general equilibrium with correlated industry shocks, may dampen the
 effect of demand shocks. However, they assert that this adjustment would alter only the magnitude, not the direction, of
 the analysis. 
 
@@ -2910,7 +2910,7 @@ the presence of asymmetric information between financial intermediaries and firm
 Furthermore, the cleansing effect on overall production appears to be cumulative, with its impact amplifying over time,
 as evidenced by the trend in the graph. Thus, it can be concluded that two economies, identical in their distribution of
 productivity and capital among firms and initialized with the same seed\footnote{All simulations were conducted with the
-the same seed for consistency.}, will diverge in terms of output and productivity if one allows for capital reallocation
+same seed for consistency.}, will diverge in terms of output and productivity if one allows for capital reallocation
 through firm exits. This divergence is not only distinct but also grows as time progresses. 
 
 \section{Solving the Belman with Benveniste-Scheinkman}
