--- a/literature/theory/main/theory.tex
+++ b/literature/theory/main/theory.tex
@@ -476,9 +476,9 @@ analysis, it is clear that these trends are significant and have been taken into
 
 Moreover, the authors show how the patterns change considerably in the great recession, particularly regarding how the
 creation and destruction rate of jobs respond to the sharp fall in demand. They found as expected from \cite{CabHarm94}
-that the creation rate of new jobs slower before the crisis spreads out and than the destruction rate increases when it is
-not possible to fully accommodate the decrease in demand only stopping new labour hiring. They asses that during the
-Great Recession this pattern changes in particular the fraction of net employment contraction accounted by a job
+that the creation rate of new jobs is slower before the crisis spreads out and than the destruction rate increases when it is
+not possible to fully accommodate the decrease in demand only stopping new labor hiring. They asses that during the
+Great Recession this pattern changed in particular the fraction of net employment contraction accounted by a job
 reduction is higher than 0.5, while for all the previous recessions it was way below 0.4 as shown in the table.
 \begin{table}[H]
     \centering
@@ -1801,7 +1801,7 @@ dividends.
 
         \end{axis}
     \end{tikzpicture}
-    \caption{Phase diagram of dividends with respect to capital, depicting the steady state level for dividends.}
+    \caption{Phase diagram of dividends concerning capital, depicting the steady state level for dividends.}
     \label{fig:dividend_dynamics}
 \end{figure}
 
@@ -1810,7 +1810,7 @@ particular focus on the behavior when capital is below or above the steady-state
 
 When the capital is below the steady-state level (\(k_t < \hat{k}\)), thus on the left of the vertical line, the
 firm is optimal to increase dividends over time (\(d_t<d_{t+1}\)) as represented by the arrow point upward. When instead
-(\(k_t > \hat{k}\)), divdends must shrink over time (\(d_t>d_{t+1}\)).
+(\(k_t > \hat{k}\)), dividends must shrink over time (\(d_t>d_{t+1}\)).
 \paragraph{Steady state for capital}
 Lets look at the locus in which capital is stationary \(\Delta k = 0 \) is given by the f-of-f constraint \ref{eq17}:
 \begin{align}
@@ -1822,7 +1822,7 @@ In our case, as obtained in the above section, the locus in which capital is sta
 \end{align}
 
 This function starts at the origin since (\(f(0)=0\)), with a maximum in \(\underline{k}\) (defined as capital level
-such that \(f^{\prime}(\underline{k})=\delta\)). From equation \ref{eq15'} we can find the level of capital that maximises dividends
+such that \(f^{\prime}(\underline{k})=\delta\)). From equation \ref{eq15'} we can find the level of capital that maximizes dividends
 at the steady state of capital:
 \begin{align}
     \underline{k} &= \left[\frac{\delta}{\alpha Z}\right]  \label{eq19}
@@ -2860,7 +2860,7 @@ line delineates the case without financial frictions, and the blue line portrays
         minor grid style={lightgray!25},
         width=0.8\textwidth,
         height=6cm,
-        legend entries={Without Frictions,With Frictions},
+        legend entries={No exit, Exit},
         legend style={at={(0.5,-0.2)},anchor=north,legend cell align=left}
     ]
     \addplot[red, mark=square*] table [col sep=comma, x=Step, y=Total Production] {noexit_frictions.csv};
@@ -2874,7 +2874,7 @@ line delineates the case without financial frictions, and the blue line portrays
 \end{figure}
 
 Observations indicate that financial frictions attenuate overall production, akin to an effective reduction in
-productivity when  firms operate with leverage. Although the cleansing effect is evident without financial frictions, it
+productivity when firms operate with leverage. Although the cleansing effect is evident without financial frictions, it
 is imperative to examine whether this effect is sustained when frictions are introduced. To this end, the subsequent plot
 juxtaposes the overall output for two comparable financial friction scenarios: one with capital reallocation and one
 without.
